# Praktikum

./: CONTRIBUTING.md  LICENSE  README (5).md  README.md  index (4).html  main.rs  package.json
courses/: README.md  example-python-ru.json
docs/: README.md
tauri/: README.md  package.json
tauri/src/: index.html
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/src/: lib.rs  main.rs
